force-app/main/default/objects/Zuora__Payment__c/Zuora__Payment__c.object-meta.xml
<CustomObject>
    <description>Zuora Payment object.  A payment is the money that customers send to pay for charges related to their subscriptions.
The Payment object holds all of the information about an individual payment, including the payment amount and to which invoices the payment is applied.</description>
    <label>Payment</label>
    <nameField>
        
        <label>Payment Number</label>
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>