force-app/main/default/objects/Zuora__Payment__c/fields/Lockbox__c.field-meta.xml
<CustomField>
    <fullName>Lockbox__c</fullName>
    <inlineHelpText>Lockbox, as set in Zuora. It&apos;s defaulted and set for all payments, but only meaningful for external payments (checks)</inlineHelpText>
    <label>Zuora Lockbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>