force-app/main/default/objects/Zuora__Payment__c/fields/Lockbox_Formula__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Formula__c</fullName>
    <formula>IF(ISPICKVAL(Zuora__Type__c, &quot;External&quot;), 
   Lockbox__c,
   &quot;&quot;)</formula>
    <inlineHelpText>Lockbox used for external payments (checks)</inlineHelpText>
    <label>Lockbox</label>
    <type>Text</type>
</CustomField>