force-app/main/default/objects/Zuora__Payment__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <description>Used to show the check number or CC information on the customer portal</description>
    <formula>IF( ISPICKVAL(Zuora__Type__c, &quot;Electronic&quot;), 
    Zuora__PaymentMethod__c, 
    Zuora__PaymentMethod__c + &quot; &quot; +  Zuora__ReferenceId__c)</formula>
    <inlineHelpText>Details about the payment (check number, CC, or ACH information)</inlineHelpText>
    <label>Method</label>
    <type>Text</type>
</CustomField>