force-app/main/default/objects/Zuora__Payment__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The default payment gateway on the Billing Account when the Payment is downloaded (which is the payment gateway that is used to make the payment).</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>Zuora__PaymentGateway__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>