force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Account__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The CRM Account that this payment is related to.</description>
    <inlineHelpText>The CRM Account that this payment is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>