force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AccountingCode__c</fullName>
    <description>The accounting code for the payment. Accounting codes group transactions that contain similar accounting attributes.</description>
    <inlineHelpText>The accounting code for the payment. Accounting codes group transactions that contain similar accounting attributes.</inlineHelpText>
    <label>Accounting Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>