force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Amount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Amount__c</fullName>
    <description>The amount of the payment.</description>
    <inlineHelpText>The amount of the payment.</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>