force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__AppliedAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AppliedAmount__c</fullName>
    <description>The applied amount</description>
    <inlineHelpText>The applied amount</inlineHelpText>
    <label>Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>