force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__AppliedCreditBalanceAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AppliedCreditBalanceAmount__c</fullName>
    <description>The amount of the payment to apply to a credit balance.</description>
    <inlineHelpText>The amount of the payment to apply to a credit balance.</inlineHelpText>
    <label>Applied Credit Balance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>