force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__AppliedInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AppliedInvoiceAmount__c</fullName>
    <description>The amount of the payment to apply to an invoice.</description>
    <inlineHelpText>The amount of the payment to apply to an invoice.</inlineHelpText>
    <label>Applied Invoice Amount</label>
    <summarizedField>Zuora__PaymentInvoice__c.Zuora__ApplyAmount__c</summarizedField>
    <summaryForeignKey>Zuora__PaymentInvoice__c.Zuora__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>