force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__AuthTransactionId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__AuthTransactionId__c</fullName>
    <description>The authorization transaction ID from the payment gateway. Use this field for electronic payments, such as credit cards.</description>
    <inlineHelpText>The authorization transaction ID from the payment gateway. Use this field for electronic payments, such as credit cards.</inlineHelpText>
    <label>Auth Transaction ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>