force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__BankIdentificationNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BankIdentificationNumber__c</fullName>
    <description>The first six digits of the credit card or debit card used for the payment, when applicable.</description>
    <inlineHelpText>The first six digits of the credit card or debit card used for the payment, when applicable.</inlineHelpText>
    <label>Bank Identification Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>