force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__BillingAccount__c</fullName>
    <description>The billing account that the payment is for.</description>
    <inlineHelpText>The billing account that the payment is for.</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Zuora__CustomerAccount__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>