force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__CancelledOn__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CancelledOn__c</fullName>
    <description>The date when the payment was canceled.</description>
    <inlineHelpText>The date when the payment was canceled.</inlineHelpText>
    <label>Cancelled On</label>
    <type>DateTime</type>
</CustomField>