force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Comment__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Comment__c</fullName>
    <description>The comment about the payment.</description>
    <inlineHelpText>The comment about the payment</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>