force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__CreatedById__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreatedById__c</fullName>
    <description>The Zuora user who created the payment.</description>
    <inlineHelpText>The Zuora user who created the payment.</inlineHelpText>
    <label>Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>