force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__CreatedDate__c</fullName>
    <description>The date when the payment was created in Zuora system.</description>
    <inlineHelpText>The date when the payment was created in Zuora system.</inlineHelpText>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>