force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Effective_Date__c</fullName>
    <description>The date when the payment takes effect.</description>
    <inlineHelpText>The date when the payment takes effect.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>