force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__EffectiveDate__c</fullName>
    <description>The date when the payment takes effect.</description>
    <inlineHelpText>The date when the payment takes effect.</inlineHelpText>
    <label>Effective Date (Deprecated)</label>
    <type>DateTime</type>
</CustomField>