force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__EXT_ID__c.field-meta.xml
<CustomField>
    <fullName>Zuora__EXT_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External Id For Payment object,   Represents a Zuora Payment object Id</description>
    <externalId>true</externalId>
    <label>Unique External Id</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>