force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__External_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora__External_Id__c</fullName>
    <description>The payment ID in Zuora system.</description>
    <externalId>true</externalId>
    <label>External ID(Deprecated)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>