force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__GatewayOrderId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__GatewayOrderId__c</fullName>
    <description>The ID of the gateway order, which is the merchant-specified natural key value.</description>
    <inlineHelpText>The ID of the gateway order, which is the merchant-specified natural key value.</inlineHelpText>
    <label>Gateway Order ID</label>
    <length>70</length>
    <type>Text</type>
</CustomField>