force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__GatewayResponse__c.field-meta.xml
<CustomField>
    <fullName>Zuora__GatewayResponse__c</fullName>
    <description>The message returned from the payment gateway for the payment. This message is gateway-dependent.</description>
    <inlineHelpText>The message returned from the payment gateway for the payment. This message is gateway-dependent.</inlineHelpText>
    <label>Gateway Response</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>