force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__GatewayResponseCode__c.field-meta.xml
<CustomField>
    <fullName>Zuora__GatewayResponseCode__c</fullName>
    <description>The code returned from the payment gateway for the payment. This code is gateway-dependent.</description>
    <inlineHelpText>The code returned from the payment gateway for the payment. This code is gateway-dependent.</inlineHelpText>
    <label>Gateway Response Code</label>
    <length>64</length>
    <type>Text</type>
</CustomField>