force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__GatewayStatus__c.field-meta.xml
<CustomField>
    <fullName>Zuora__GatewayStatus__c</fullName>
    <description>The status of the payment in the gateway.</description>
    <label>Gateway State</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>MarkedForSubmission</fullName>
                
                
                    <label>MarkedForSubmission</label>
                
                </value>
            
                <value>
                
                    <fullName>Submitted</fullName>
                
                
                    <label>Submitted</label>
                
                </value>
            
                <value>
                
                    <fullName>Settled</fullName>
                
                
                    <label>Settled</label>
                
                </value>
            
                <value>
                
                    <fullName>NotSubmitted</fullName>
                
                
                    <label>NotSubmitted</label>
                
                </value>
            
                <value>
                
                    <fullName>FailedToSettle</fullName>
                
                
                    <label>FailedToSettle</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>