force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Invoice__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The invoice that the payment is applied to.</description>
    <label>Invoice</label>
    <referenceTo>Zuora__ZInvoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>