force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__InvoiceNumber__c</fullName>
    <description>The unique identification number for the invoice that the payment is applied to.</description>
    <inlineHelpText>The unique identification number for the invoice that the payment is applied to.</inlineHelpText>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>