force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__MarkedForSubmissionOn__c.field-meta.xml
<CustomField>
    <fullName>Zuora__MarkedForSubmissionOn__c</fullName>
    <description>The date when a payment was marked and waiting for batch submission to the payment process. Use this field for the Spectrum gateway only.</description>
    <inlineHelpText>The date when a payment was marked and waiting for batch submission to the payment process. Use this field for the Spectrum gateway only.</inlineHelpText>
    <label>Marked For Submission On</label>
    <type>DateTime</type>
</CustomField>