force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Payment Method that this payment is related to.</description>
    <inlineHelpText>The Payment Method that this payment is related to.</inlineHelpText>
    <label>Payment Method (Deprecated)</label>
    <referenceTo>Zuora__PaymentMethod__c</referenceTo>
    <relationshipLabel>Payment</relationshipLabel>
    <relationshipName>Payment</relationshipName>
    <type>Lookup</type>
</CustomField>