force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentMethod__c</fullName>
    <description>The display name of the payment method used for the payment.</description>
    <inlineHelpText>The display name of the payment method used for the payment.</inlineHelpText>
    <label>Payment Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>