force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__PaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentMethodId__c</fullName>
    <description>The id of the payment method used for the payment.</description>
    <label>Payment Method Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>