force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__PaymentNumber__c.field-meta.xml
<CustomField>
    <fullName>Zuora__PaymentNumber__c</fullName>
    <label>PaymentNumber</label>
    <length>32</length>
    <type>Text</type>
</CustomField>