force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__ReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__ReferenceId__c</fullName>
    <description>The transaction ID returned by the payment gateway. Use this field to reconcile payments between your gateway and Zuora Payments.</description>
    <inlineHelpText>The transaction ID returned by the payment gateway. Use this field to reconcile payments between your gateway and Zuora Payments.</inlineHelpText>
    <label>Reference ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>