force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__RefundAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RefundAmount__c</fullName>
    <description>The amount of the payment that is refunded. This field is null if no refund is made against the payment. Intended for use with AR Settlement.</description>
    <inlineHelpText>The amount of the payment that is refunded. This field is null if no refund is made against the payment. Intended for use with AR Settlement.</inlineHelpText>
    <label>Refund Amount (AR Settlement)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>