force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__RefundedAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__RefundedAmount__c</fullName>
    <description>The amount of the payment that is refunded. This field is null if no refund is made against the payment.</description>
    <inlineHelpText>The amount of the payment that is refunded. This field is null if no refund is made against the payment.</inlineHelpText>
    <label>Refund Amount</label>
    <summarizedField>Zuora__PaymentInvoice__c.Zuora__RefundAmount__c</summarizedField>
    <summaryForeignKey>Zuora__PaymentInvoice__c.Zuora__Payment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>