force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__SecondPaymentReferenceId__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SecondPaymentReferenceId__c</fullName>
    <description>The transaction ID returned by the payment gateway if there is an additional transaction for the payment.</description>
    <inlineHelpText>The transaction ID returned by the payment gateway if there is an additional transaction for the payment.</inlineHelpText>
    <label>Second Payment Reference ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>