force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__SettledOn__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SettledOn__c</fullName>
    <description>The date when the payment was settled in the payment processor.</description>
    <inlineHelpText>The date when the payment was settled in the payment processor.</inlineHelpText>
    <label>Settled On</label>
    <type>DateTime</type>
</CustomField>