force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__SoftDescriptor__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoftDescriptor__c</fullName>
    <description>A payment gateway-specific field that maps to Zuora for the gateways, Orbital and Verifi.</description>
    <inlineHelpText>A payment gateway-specific field that maps to Zuora for the gateways, Orbital and Verifi.</inlineHelpText>
    <label>Soft Descriptor</label>
    <length>35</length>
    <type>Text</type>
</CustomField>