force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__SoftDescriptorPhone__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SoftDescriptorPhone__c</fullName>
    <description>A payment gateway-specific field that maps to Zuora for the gateways, Orbital and Verifi</description>
    <inlineHelpText>A payment gateway-specific field that maps to Zuora for the gateways, Orbital and Verifi</inlineHelpText>
    <label>Soft Descriptor Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>