force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Status__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Status__c</fullName>
    <description>The status of the payment in the Zuora system. The value depends on the type of payment.</description>
    <inlineHelpText>The status of the payment in the Zuora system. The value depends on the type of payment.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Canceled</fullName>
                
                
                    <label>Canceled</label>
                
                </value>
            
                <value>
                
                    <fullName>Error</fullName>
                
                
                    <label>Error</label>
                
                </value>
            
                <value>
                
                    <fullName>Processing</fullName>
                
                
                    <label>Processing</label>
                
                </value>
            
                <value>
                
                    <fullName>Processed</fullName>
                
                
                    <label>Processed</label>
                
                </value>
            
                <value>
                
                    <fullName>Posted</fullName>
                
                
                    <label>Posted</label>
                
                </value>
            
                <value>
                
                    <fullName>Voided</fullName>
                
                
                    <label>Voided</label>
                
                </value>
            
                <value>
                
                    <fullName>Cancelled</fullName>
                
                
                    <label>Cancelled</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>