force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__SubmittedOn__c.field-meta.xml
<CustomField>
    <fullName>Zuora__SubmittedOn__c</fullName>
    <description>The date when the payment was submitted.</description>
    <inlineHelpText>The date when the payment was submitted.</inlineHelpText>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>