force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__TransferedToAccounting__c.field-meta.xml
<CustomField>
    <fullName>Zuora__TransferedToAccounting__c</fullName>
    <description>Indicates if the payment was transferred to an external accounting system.</description>
    <inlineHelpText>Indicates if the payment was transferred to an external accounting system.</inlineHelpText>
    <label>Transferred to Accounting</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Error</fullName>
                
                
                    <label>Error</label>
                
                </value>
            
                <value>
                
                    <fullName>Ignore</fullName>
                
                
                    <label>Ignore</label>
                
                </value>
            
                <value>
                
                    <fullName>Processing</fullName>
                
                
                    <label>Processing</label>
                
                </value>
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>