force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__Type__c.field-meta.xml
<CustomField>
    <fullName>Zuora__Type__c</fullName>
    <description>Indicates if the payment is external or electronic.</description>
    <inlineHelpText>Indicates if the payment is external or electronic.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Electronic</fullName>
                
                
                    <label>Electronic</label>
                
                </value>
            
                <value>
                
                    <fullName>External</fullName>
                
                
                    <label>External</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>