force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__UnappliedAmount__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UnappliedAmount__c</fullName>
    <description>The unapplied amount</description>
    <inlineHelpText>The unapplied amount</inlineHelpText>
    <label>Unapplied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>