force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__UpdatedById__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UpdatedById__c</fullName>
    <description>The Zuora user who last updated the payment.</description>
    <inlineHelpText>The Zuora user who last updated the payment.</inlineHelpText>
    <label>Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>