force-app/main/default/objects/Zuora__Payment__c/fields/Zuora__UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>Zuora__UpdatedDate__c</fullName>
    <description>The date when the payment was last updated in Zuora system.</description>
    <inlineHelpText>The date when the payment was last updated in Zuora system.</inlineHelpText>
    <label>Updated Date</label>
    <type>DateTime</type>
</CustomField>